[project]
name = "paytm-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "asyncpg==0.29.0",
    "fastapi==0.109.0",
    "passlib[bcrypt]==1.7.4",
    "pydantic[email]==2.5.3",
    "python-multipart==0.0.6",
    "sqlalchemy[asyncio]==2.0.25",
    "uvicorn[standard]==0.27.0",
]
